--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -9,7 +9,10 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
            <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-             <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+           <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+
+</head>
+
     </head>
     
 <body>
@@ -270,16 +273,16 @@
                 </div>
                 <div class="footer-right">
                   <h1>Get In Touch</h1>
-                  <a href="https://www.google.com/maps/@-33.8329449,18.6465124,3a,75y,258.89h,95.06t/data=!3m6!1e1!3m4!1sE67VSZZjYXtqV1Z4Y_y6Rg!2e0!7i16384!8i8192" target=_blank ><p> Scher Rd, Durbanville, Cape Town, 7550<i class="fa fa-map-marker"></i></p></a>
+                  <a href="https://www.google.com/maps/place/Die+Boord+Superspar+Stellenbosch/@-33.9438527,18.8517539,3a,57.4y,251.43h,101.48t/data=!3m8!1e1!3m6!1sAF1QipMtKcY2Op2XHUJKTuZqrERNiBAndcpmU3jHc07e!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMtKcY2Op2XHUJKTuZqrERNiBAndcpmU3jHc07e%3Dw203-h100-k-no-pi-0-ya205.0277-ro0-fo100!7i5376!8i2688!4m6!3m5!1s0x1dcdb2f09a18db77:0xa0e476a2751eab6e!8m2!3d-33.9438058!4d18.8514632!16s%2Fg%2F11gzxthcy" target=_blank ><p> Scher Rd, Stellenbosch, Cape Town, 7550<i class="fa fa-map-marker"></i></p></a>
                   <p>allouacheelias@gmail.com <i class="fa fa-paper-plane"></i></p>
                   <p>0027 676738043 <i class="fa fa-phone"></i></p>
                 </div>
               </div>
               <div class="social-links">  
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-youtube-play"></i>
+                 <a href="https://www.facebook.com/profile.php?id=100090276615469" target="-blank"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank">  <i class="fa fa-twitter"></i></a>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-youtube-play"></i>
                 <p>copyright Keep it Handsome Barber Shop</p>
               </div>
          </section>
