--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -4,7 +4,7 @@
 
 <head>
       
-    <title>keep it handsome</title>
+    <title>Kader Barber shop</title>
      <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -273,7 +273,7 @@
                 </div>
                 <div class="footer-right">
                   <h1>Get In Touch</h1>
-                  <a href="https://www.google.com/maps/place/Die+Boord+Superspar+Stellenbosch/@-33.9438527,18.8517539,3a,57.4y,251.43h,101.48t/data=!3m8!1e1!3m6!1sAF1QipMtKcY2Op2XHUJKTuZqrERNiBAndcpmU3jHc07e!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMtKcY2Op2XHUJKTuZqrERNiBAndcpmU3jHc07e%3Dw203-h100-k-no-pi-0-ya205.0277-ro0-fo100!7i5376!8i2688!4m6!3m5!1s0x1dcdb2f09a18db77:0xa0e476a2751eab6e!8m2!3d-33.9438058!4d18.8514632!16s%2Fg%2F11gzxthcy" target=_blank ><p> Scher Rd, Stellenbosch, Cape Town, 7550<i class="fa fa-map-marker"></i></p></a>
+                  <a href="https://www.google.com/maps/place/Merino+Mall/@-26.5344751,29.9944489,3a,75y,90t/data=!3m8!1e2!3m6!1sAF1QipNO17HtOKjm79TZvNcgfMY8dJj9zgQUVTUHnF8J!2e10!3e12!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNO17HtOKjm79TZvNcgfMY8dJj9zgQUVTUHnF8J%3Dw86-h114-k-no!7i3024!8i4032!4m14!1m7!3m6!1s0x1eebe59cc74f0041:0xb60a807170f82dae!2sMerino+Mall!8m2!3d-26.5344751!4d29.9944489!16s%2Fg%2F11p5ltmm5z!3m5!1s0x1eebe59cc74f0041:0xb60a807170f82dae!8m2!3d-26.5344751!4d29.9944489!16s%2Fg%2F11p5ltmm5z" target=_blank ><p> Merino Mall 11 voortreker road ,2353 <i class="fa fa-map-marker"></i></p></a>
                   <p>allouacheelias@gmail.com <i class="fa fa-paper-plane"></i></p>
                   <p>0027 676738043 <i class="fa fa-phone"></i></p>
                 </div>
