--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -20,7 +20,7 @@
            <img class="logo" src="images/logo.png">
              
             <div class="allouache-text" >
-                 <h1 >Keep it Handsome</h1>
+                 <h1 >Kader Barber Shop</h1>
                    <p> style you hair is style your life</p>
                      <div class="allouache-btn"> 
                        <a href="#"><span></span>find out</a>
