--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -77,7 +77,7 @@
                    </div>
               
                 <div class="feature-text" >
-                  <p>Keep it handsome Barber Shop specializes in classic cuts, beard trims, hot towel shaves and quality grooming products. Our team of professional and knowledgeable barbers work to help you achieve your best look. We’re a little bit old school with a modern touch. We thrive on great music, thoughtful conversation and fostering relationship in our community. We’ve created a laid back environment for your regular dose of self-care.
+                  <p>Kader Barber Shop specializes in classic cuts, beard trims, hot towel shaves and quality grooming products. Our team of professional and knowledgeable barbers work to help you achieve your best look. We’re a little bit old school with a modern touch. We thrive on great music, thoughtful conversation and fostering relationship in our community. We’ve created a laid back environment for your regular dose of self-care.
                     </p>
                 </div>
               </div>
@@ -127,7 +127,7 @@
               <div class="service-desc">
                 <h3>Hair cut</h3>
                 <hr>
-                <p> Our Best of Durbanville-winning haircut meticulously crafted by one of our well-seasoned Master Barbers. Tapers, fades, undercuts, comb-overs, faux hawks, long hair – we do it all. </p>
+                <p> Our Best -winning haircut meticulously crafted by one of our well-seasoned Master Barbers. Tapers, fades, undercuts, comb-overs, faux hawks, long hair – we do it all. </p>
               </div>
               </div>
               <div class="single-service"><img src="images/jongar.jpg">
@@ -283,7 +283,7 @@
                   <a href="https://www.instagram.com/" target="_blank">  <i class="fa fa-twitter"></i></a>
                     <i class="fa fa-instagram"></i>
                     <i class="fa fa-youtube-play"></i>
-                <p>copyright Keep it Handsome Barber Shop</p>
+                <p>copyright kader Barber Shop</p>
               </div>
          </section>
         <script>
