--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -100,7 +100,7 @@
                    </div>
               
                 <div class="feature-text" >
-                  <p>At keep it handsome barber shop every one is commited to serve the community the best by keeping the prices Affordable for evey one
+                  <p>At kader barber shop every one is commited to serve the community the best by keeping the prices Affordable for evey one
                     </p>
                 </div>
               </div>
