--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -229,7 +229,7 @@
                     <small>@BenNorman</small>
                   </div>
                 </div>
-                  <p>paragraph to be reviewed  </p>
+                  <p>Well done guys , always top masters  </p>
                 </div>
                 <div class="testimonial-col">
                   <div class="user">
@@ -239,7 +239,7 @@
                       <small>@LiaraKarian</small>
                     </div>
                   </div>
-                  <p>paragraph to be reviewed  </p>
+                  <p> awesome spot ,energetic atmosphere...my boys love the place  </p>
                 </div>
                 <div class="testimonial-col">
                   <div class="user">
@@ -249,7 +249,7 @@
                       <small>@RickyDanial</small>
                     </div>
                   </div>
-                  <p>paragraph to be reviewed  </p>
+                  <p>never been disappointed , number one  </p>
                 </div>
 
               </div>
