--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -274,8 +274,8 @@
                 <div class="footer-right">
                   <h1>Get In Touch</h1>
                   <a href="https://www.google.com/maps/@-33.8329449,18.6465124,3a,75y,256.55h,80.12t/data=!3m6!1e1!3m4!1sE67VSZZjYXtqV1Z4Y_y6Rg!2e0!7i16384!8i8192" target=_blank ><p>R1B scher road Durbanville, 7550 <i class="fa fa-map-marker"></i></p></a>
-                  <p>lyeslouanchi@gmail.com <i class="fa fa-paper-plane"></i></p>
-                  <p>0027 676738043 <i class="fa fa-phone"></i></p>
+                  <p><a href="mailto:lyeslouanchi@gmail.com">lyeslouanchi@gmail.com </a><i class="fa fa-paper-plane"></i></p>
+                  <p><a href="tel:+0027676738043">067-673-8043</a><i class="fa fa-phone"></i></p>
                 </div>
               </div>
               <div class="social-links">  
