--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -280,9 +280,9 @@
               </div>
               <div class="social-links">  
                  <a href="https://www.facebook.com/profile.php?id=100090276615469" target="-blank"><i class="fa fa-facebook"></i></a>
-                  <a href="https://www.instagram.com/" target="_blank">  <i class="fa fa-twitter"></i></a>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-youtube-play"></i>
+                  <a href="https://www.twitter.com/" target="_blank">  <i class="fa fa-twitter"></i></a>
+                    <a href="https://www.twitter.com"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.youtube.com"><i class="fa fa-youtube-play"></i></a>
                 <p>copyright Keep it Handsome Barber Shop</p>
               </div>
          </section>
