--- a/keep it hansome barber.html
+++ b/keep it hansome barber.html
@@ -148,7 +148,7 @@
                  <p>For our customers on the go, we offer a convenient take-away option at our shop. Simply place your order at the counter and our friendly staff will prepare it for you to enjoy wherever you are. We use eco-friendly packaging to minimize our environmental impact, and our menu includes a variety of grab-and-go options, including pastries and snacks. Whether you're rushing to work or simply prefer to savor your coffee on the move, we've got you covered.                   </p>
                </div>
              </div>
-             <h1>Affordable Cost</h1>
+             <h1>symbolic prices</h1>
             
              <div class="features-desc">
                <div class="feature-icon">   
